--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <div class="border"><a href="#" ><i class="fa fa-skype"></i></a></div>
                 <div class="border"><a href="#" ><i class="fa fa-github"></i></a></div>
                 <div class="social-wrapper">
-                    <div class="border1">
+                    <!-- <div class="border1">
                     </div>
                     <i class="fa fa-github"></i></a>
-                </div>
+                </div> -->
             </div>
            </div>
        </div>
