--- a/index.html
+++ b/index.html
@@ -62,16 +62,32 @@
                <span>Web developer/Data scientist/Sales Consultant</span>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum eaque in atque optio, velit saepe, provident nam ullam repellat ea error est dolorem voluptates perferendis, quis deserunt nobis? Reiciendis, provident.</p>
             <div class="social-media" id="social">
-                <div class="border"><a href="#" ><i class="fa fa-facebook"></i></a></div>
-                <div class="border"><a href="#" ><i class="fa fa-twitter"></i></a></div>
-                <div class="border"><a href="#" ><i class="fa fa-whatsapp"></i></a></div>
-                <div class="border"><a href="#" ><i class="fa fa-skype"></i></a></div>
-                <div class="border"><a href="#" ><i class="fa fa-github"></i></a></div>
                 <div class="social-wrapper">
-                    <!-- <div class="border1">
+                    <div class="social-wrapper-border">
                     </div>
-                    <i class="fa fa-github"></i></a>
-                </div> -->
+                    <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
+                </div>
+                <div class="social-wrapper">
+                    <div class="social-wrapper-border">
+                    </div>
+                    <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
+                </div>
+                <div class="social-wrapper">
+                    <div class="social-wrapper-border">
+                    </div>
+                    <a href="#" class="social-icon"><i class="fa fa-whatsapp"></i></a>
+                </div>
+                <div class="social-wrapper">
+                    <div class="social-wrapper-border">
+                    </div>
+                    <a href="#" class="social-icon"><i class="fa fa-skype"></i></a>
+                </div>
+                <div class="social-wrapper">
+                    <div class="social-wrapper-border">
+                    </div>
+                    <a href="#" class="social-icon"><i class="fa fa-github"></i></a>
+                </div>
+
             </div>
            </div>
        </div>
