Updated css and index

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
            </div>
            <div class="grid-item">
                <h1>Samuel Momoh</h1>
-               <span>Web developer/Data scientist/Sales Consultant</span>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum eaque in atque optio, velit saepe, provident nam ullam repellat ea error est dolorem voluptates perferendis, quis deserunt nobis? Reiciendis, provident.</p>
+               <span class="title">Web developer/Data scientist/Sales Consultant</span>
+            <p class="about-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum eaque in atque optio, velit saepe, provident nam ullam repellat ea error est dolorem voluptates perferendis, quis deserunt nobis? Reiciendis, provident.</p>
             <div class="social-media" id="social">
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
