--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
        <div class="work-button" >
            <botton class="buttons work-active web" id="WebApp"> Web</botton>
-           <botton class="buttons app" id="Andriod">Andriod</botton>
+           <botton class="buttons app" id="Andriod">Component</botton>
            <botton class="buttons chat"  id="chatBot">ChatBot</botton>
        </div>
        <div class="work-items" id="web-items">
