--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="img/2.jpg">
+    <title>Samuel Momoh</title>
+    <link rel="icon" href="img/sam.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
-    <script src="./script/jquery.min.js"></script>
-    <script src="./gsap-public/minified/gsap.min.js"></script>
-    <script src="./scrollmagic/minified/ScrollMagic.min.js"></script>
-    <script src="./scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+    <script src="script/jquery.min.js"></script>
+    <script src="gsap-public/minified/gsap.min.js"></script>
+    <script src="scrollMagic/minified/ScrollMagic.min.js"></script>
+    <script src="scrollMagic/minified/plugins/debug.addIndicators.min.js"></script>
 </head>
 <body>
  <div class="header">
@@ -59,33 +59,40 @@
            </div>
            <div class="grid-item">
                <h1>Samuel Momoh</h1>
-               <span class="title">Web developer/Data scientist/Sales Consultant</span>
-            <p class="about-details">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum eaque in atque optio, velit saepe, provident nam ullam repellat ea error est dolorem voluptates perferendis, quis deserunt nobis? Reiciendis, provident.</p>
+               <span>Web developer/Data scientist/Sales Consultant</span>
+            <p>
+              I am an expert in customer support, sales support, marketing and a computer programming freak. I have been able to combine my customer support skills and technical skills to provide a better experience for my prospective users and customer. With me, you get'<br>
+              <strong>1.</strong> Excellent customer support service<br>
+               <strong>2.</strong> Sales support<br>
+                <strong>3.</strong> Email  campaign and marketing using well known platforms<br>
+                 <strong>4.</strong> Web application with highly interactive user interface<br>
+              The above are just a few of the many things i am confident that my employer gets from working with me me. Plus, i have an excellent understanding of the English language and can put any thought, ideas and researched works into proper British English or American English
+            </p>
             <div class="social-media" id="social">
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
                     </div>
-                    <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
+                    <a href="https://web.facebook.com/samuel.momoh.50596" class="social-icon"><i class="fa fa-facebook"></i></a>
                 </div>
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
                     </div>
-                    <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/Samueldan1996" class="social-icon"><i class="fa fa-twitter"></i></a>
                 </div>
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
                     </div>
-                    <a href="#" class="social-icon"><i class="fa fa-whatsapp"></i></a>
+                    <a href="https://wa.link/xa33he" class="social-icon" target="blank"><i class="fa fa-whatsapp"></i></a>
                 </div>
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
                     </div>
-                    <a href="#" class="social-icon"><i class="fa fa-skype"></i></a>
+                    <a href="live:samueldan_1" class="social-icon"><i class="fa fa-skype"></i></a>
                 </div>
                 <div class="social-wrapper">
                     <div class="social-wrapper-border">
                     </div>
-                    <a href="#" class="social-icon"><i class="fa fa-github"></i></a>
+                    <a href="https://samuel-momoh.github.io/" class="social-icon"><i class="fa fa-github"></i></a>
                 </div>
 
             </div>
@@ -144,10 +151,10 @@
        <div class="work-button" >
            <botton class="buttons work-active web" id="WebApp"> Web</botton>
            <botton class="buttons app" id="Andriod">Component</botton>
-           <botton class="buttons chat"  id="chatBot">ChatBot</botton>
+           <botton class="buttons chat"  id="chatBot">Application</botton>
        </div>
        <div class="work-items" id="web-items">
-           <img src="img/sample1.jpg" alt="sample-1">
+           <img src="img/sample/bandicam 2020-10-05 17-19-40-956.jpg" alt="sample-1">
            <img src="img/sample2.jpg" alt="sample-2">
            <img src="img/sample3.jpg" alt="sample-3">
            <img src="img/sample4.jpg" alt="sample-4">
@@ -155,18 +162,17 @@
            <img src="img/sample6.jpg" alt="sample-6">
        </div>
        <div class="work-items sample-toggle" id="andriod-items">
-        <img src="img/1.png" alt="sample-1">
-        <img src="img/2.jpg" alt="sample-2">
-        <img src="img/3.png" alt="sample-3">
-        <img src="img/4.png" alt="sample-4">
-        <img src="img/5.jpg" alt="sample-1">
+        <img src="img/sample/bandicam 2020-07-11 01-55-23-103.jpg" alt="samuel-momoh-sample-1">
+        <img src="img/sample/bandicam 2020-10-05 17-02-29-120.jpg" alt="samuel-momoh-sample-2">
+        <img src="img/sample/bandicam 2020-10-05 17-10-25-244.jpg" alt="samuel-momoh-sample-3">
+        <img src="img/sample/bandicam 2020-10-05 17-11-08-699.jpg" alt="samuel-momoh-sample-4">
     </div>
     <div class="work-items sample-toggle" id="chatBot-items">
-        <img src="img/sam.jpg" alt="sample-1">
-        <img src="img/science.png" alt="sample-2">
-        <img src="img/3.png" alt="sample-3">
-        <img src="img/4.png" alt="sample-4">
-        <img src="img/5.jpg" alt="sample-1">
+        <img src="img/sample/bandicam 2020-10-19 22-22-08-524.jpg" alt="music-sample-1">
+        <img src="img/sample/bandicam 2020-10-05 17-31-19-626.jpg" alt="sample-2">
+        <img src="img/sample/bandicam 2020-10-19 22-20-26-608.jpg" alt="sample-3">
+        <img src="img/sample/bandicam 2020-10-19 22-18-22-786.jpg" alt="sample-4">
+        <img src="img/sample/bandicam 2020-10-19 22-41-16-462.jpg" alt="sample-1">
     </div>
     <div class="heading" id="contact">
         <h1>Contact</h1>
@@ -179,7 +185,7 @@
        <div class="contact" >
            <fieldset>
            <legend>To Samuel Momoh</legend>
-<form action="" method="post">
+<form action="" method="post" id="myContact">
     <label for="Name">FullName</label>
     <input type="text" placeholder="Full name" id="name">
     <!-- <span id="name_error">erro1</span> -->
@@ -203,11 +209,11 @@
     </footer>
     <script src="swiper/swiper-bundle.min.js"></script>
     <script src="script/sweetalert.min.js"></script>
-    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 <script src="timelinelite/TimelineLite.min.js"></script>
     <script src="timelinelite/TweenMax.min.js"></script>
-    <script src="scrollmagic/uncompressed/plugins/animation.gsap.js"></script>
-    <script src="scrollmagic/uncompressed/plugins/jquery.ScrollMagic.js"></script>
+    <script src="scrollMagic/uncompressed/plugins/animation.gsap.js"></script>
+    <script src="scrollMagic/uncompressed/plugins/jquery.ScrollMagic.js"></script>
+    <script type="text/javascript" src="script/scrollreveal.js"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
