--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="img/sam.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
-    <script src="script/jquery.min.js"></script>
-    <script src="gsap-public/minified/gsap.min.js"></script>
-    <script src="scrollMagic/minified/ScrollMagic.min.js"></script>
-    <script src="scrollMagic/minified/plugins/debug.addIndicators.min.js"></script>
+    <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
+    <script src="./script/jquery.min.js"></script>
+    <script src="./gsap-public/minified/gsap.min.js"></script>
+    <script src="./scrollMagic/minified/ScrollMagic.min.js"></script>
+    <script src="./scrollMagic/minified/plugins/debug.addIndicators.min.js"></script>
 </head>
 <body>
  <div class="header">
