--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
            </div>
            <div class="grid-item">
                <h1>Samuel Momoh</h1>
-               <span>Web developer/Data scientist/Sales Consultant</span>
+               <span>Full Stack developer/Data scientist/Sales Consultant</span>
             <p>
               I am an expert in customer support, sales support, marketing and a computer programming freak. I have been able to combine my customer support skills and technical skills to provide a better experience for my prospective users and customer. With me, you get'<br>
               <strong>1.</strong> Excellent customer support service<br>
                <strong>2.</strong> Sales support<br>
                 <strong>3.</strong> Email  campaign and marketing using well known platforms<br>
-                 <strong>4.</strong> Web application with highly interactive user interface<br>
+                 <strong>4.</strong> Web and mobile application with highly interactive user interface<br>
               The above are just a few of the many things i am confident that my employer gets from working with me me. Plus, i have an excellent understanding of the English language and can put any thought, ideas and researched works into proper British English or American English
             </p>
             <div class="social-media" id="social">
@@ -115,7 +115,7 @@
              </div>
         </div>
         <div class="grid-item">
-            <div class="skills-tag">C#</div>
+            <div class="skills-tag">React</div>
              <div class="skills-bar">
                  <div class="skills-level" id="c"></div>
              </div>
